--- a/client/index.html
+++ b/client/index.html
@@ -118,6 +118,7 @@
     <script src="/bower_components/angular-ui-router/release/angular-ui-router.js"></script>
     <script src="/bower_components/slick-carousel/slick/slick.min.js"></script>
     <script src="/bower_components/angular-slick/dist/slick.js"></script>
+    <script src="/bower_components/ngGeolocation/ngGeolocation.js"></script>
     <!-- endbower -->
     <!-- endbuild -->
     <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDQTpXj82d8UpCi97wzo_nKXL7nYrd4G70"></script>
@@ -126,8 +127,8 @@
     <script src="/client/app/app.module.js"></script>
     <script src="/client/app/core/core.module.js"></script>
     <script src="/client/app/data/data.module.js"></script>
-    <script src="/client/app/main/main.module.js"></script>
     <script src="/client/app/map/map.module.js"></script>
+    <script src="/client/app/main/main.module.js"></script>
     <script src="/client/app/place/place.module.js"></script>
     <script src="/client/app/user/user.module.js"></script>
     <script src="/client/app/admin/user/admin.user.module.js"></script>
@@ -141,10 +142,10 @@
     <script src="/client/app/core/core.constants.js"></script>
     <script src="/client/app/core/inspinia.js"></script>
     <script src="/client/app/data/datacontext.js"></script>
-    <script src="/client/app/main/main.controller.js"></script>
-    <script src="/client/app/main/main.route.js"></script>
     <script src="/client/app/map/map-marker.controller.js"></script>
     <script src="/client/app/map/map.js"></script>
+    <script src="/client/app/main/main.controller.js"></script>
+    <script src="/client/app/main/main.route.js"></script>
     <script src="/client/app/place/category.filter.js"></script>
     <script src="/client/app/place/place.add.controller.js"></script>
     <script src="/client/app/place/place.detail.controller.js"></script>
