--- a/client/app/map/map.html
+++ b/client/app/map/map.html
@@ -1,6 +1,6 @@
-<div class="carousel-inner" role="listbox" data-ng-controller="Map as vm">
+<div class="carousel-inner" role="listbox">
     <div class="map">
-        <ui-gmap-google-map center='map.center' zoom='map.zoom' options="map.options" events="map.events">
+        <ui-gmap-google-map center='map.center' zoom='map.zoom' options="map.options" events="map.events" control="mapControl">
             <ui-gmap-marker ng-repeat="m in map.markers" coords="m.coords" idkey="m.id" options="m.options">
                         </ui-gmap-marker>
         </ui-gmap-google-map>
