--- a/client/index.html
+++ b/client/index.html
@@ -81,6 +81,7 @@
                 </div>
             </div>
         </div>
+    <script async defer type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDQTpXj82d8UpCi97wzo_nKXL7nYrd4G70&libraries=places"></script>
     <!-- build:js /js/lib.js -->
     <!-- bower:js -->
     <script src="/bower_components/jquery/dist/jquery.js"></script>
@@ -121,14 +122,14 @@
     <script src="/bower_components/ngGeolocation/ngGeolocation.js"></script>
     <!-- endbower -->
     <!-- endbuild -->
-    <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDQTpXj82d8UpCi97wzo_nKXL7nYrd4G70"></script>
+    
     <!-- build:js /js/app.js -->
     <!-- inject:js -->
     <script src="/client/app/app.module.js"></script>
     <script src="/client/app/core/core.module.js"></script>
     <script src="/client/app/data/data.module.js"></script>
-    <script src="/client/app/map/map.module.js"></script>
     <script src="/client/app/main/main.module.js"></script>
+    <script src="/client/app/map/map.module.js"></script>
     <script src="/client/app/place/place.module.js"></script>
     <script src="/client/app/user/user.module.js"></script>
     <script src="/client/app/admin/user/admin.user.module.js"></script>
@@ -142,10 +143,11 @@
     <script src="/client/app/core/core.constants.js"></script>
     <script src="/client/app/core/inspinia.js"></script>
     <script src="/client/app/data/datacontext.js"></script>
-    <script src="/client/app/map/map-marker.controller.js"></script>
-    <script src="/client/app/map/map.js"></script>
     <script src="/client/app/main/main.controller.js"></script>
     <script src="/client/app/main/main.route.js"></script>
+    <script src="/client/app/map/map-marker.controller.js"></script>
+    <script src="/client/app/map/map.factory.js"></script>
+    <script src="/client/app/map/map.js"></script>
     <script src="/client/app/place/category.filter.js"></script>
     <script src="/client/app/place/place.add.controller.js"></script>
     <script src="/client/app/place/place.detail.controller.js"></script>
