--- a/client/app/main/panel-locations.html
+++ b/client/app/main/panel-locations.html
@@ -4,7 +4,7 @@
             <div class="ibox float-e-margins">
                 <div class="ibox-content text-center p-md">
                     <h2>
-                        <span class="text-navy">PLACE TO VISIT IN {{vm.locationName}}</span>
+                        <span class="text-navy">NEARBY LOCATION</span>
                     </h2>
                     <p>
                         Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit.
@@ -14,9 +14,9 @@
         </div>
     </div>
     <div class="row">
-        <div ng-repeat="location in vm.locations" class="col-lg-2 text-center">
+        <div ng-repeat="location in vm.locations" class="col-md-2 text-center">
             <img class="img-circle" src="data:image/gif;base64,R0lGODlhAQABAIAAAHd3dwAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw==" alt="Generic placeholder image" width="140" height="140">
-            <h3>Heading</h3>
+            <h3>{{location.name}}</h3>
         </div>
     </div>
 </div>
