--- a/client/index.html
+++ b/client/index.html
@@ -81,7 +81,7 @@
                 </div>
             </div>
         </div>
-    <script async defer type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDQTpXj82d8UpCi97wzo_nKXL7nYrd4G70&libraries=places"></script>
+    <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDQTpXj82d8UpCi97wzo_nKXL7nYrd4G70&libraries=weather,geometry,visualization,places"></script>
     <!-- build:js /js/lib.js -->
     <!-- bower:js -->
     <script src="/bower_components/jquery/dist/jquery.js"></script>
@@ -132,8 +132,8 @@
     <script src="/client/app/map/map.module.js"></script>
     <script src="/client/app/place/place.module.js"></script>
     <script src="/client/app/user/user.module.js"></script>
-    <script src="/client/app/admin/user/admin.user.module.js"></script>
     <script src="/client/app/blocks/exception/exception.module.js"></script>
+    <script src="/client/app/admin/user/admin.user.module.js"></script>
     <script src="/client/app/blocks/logger/logger.module.js"></script>
     <script src="/client/app/blocks/router/router.module.js"></script>
     <script src="/client/app/core/bootstrap.dialog.js"></script>
@@ -161,14 +161,15 @@
     <script src="/client/app/user/signup.controller.js"></script>
     <script src="/client/app/user/user.factory.js"></script>
     <script src="/client/app/user/user.route.js"></script>
-    <script src="/client/app/admin/user/admin.user.controller.js"></script>
-    <script src="/client/app/admin/user/admin.user.route.js"></script>
     <script src="/client/app/blocks/exception/exception.factory.js"></script>
     <script src="/client/app/blocks/exception/exception.handler.provider.js"></script>
+    <script src="/client/app/admin/user/admin.user.controller.js"></script>
+    <script src="/client/app/admin/user/admin.user.route.js"></script>
     <script src="/client/app/blocks/logger/logger.factory.js"></script>
     <script src="/client/app/blocks/router/router.factory.js"></script>
     <script src="/client/app/data/resources/resource.category.cache.js"></script>
     <script src="/client/app/data/resources/resource.category.js"></script>
+    <script src="/client/app/data/resources/resource.city.js"></script>
     <script src="/client/app/data/resources/resource.location.cache.js"></script>
     <script src="/client/app/data/resources/resource.location.js"></script>
     <script src="/client/app/data/resources/resource.place.cache.js"></script>
