--- a/client/app/main/panel-new-place.html
+++ b/client/app/main/panel-new-place.html
@@ -12,7 +12,7 @@
     </div>
     <div class="row">
         <div class="col-lg-12">
-            <slick class="slick_demo_2" infinite="true" slides-to-show="5" slides-to-scroll="5" autoplay="true" autoplaySpeed="5000" speed="5000"
+            <slick init-onload="true" class="slick_demo_2" infinite="true" slides-to-show="5" slides-to-scroll="5" autoplay="true" autoplaySpeed="5000" speed="5000"
                    responsive="[{ breakpoint: 1024, settings: { slidesToShow: 3, slidesToScroll: 3, infinite: true, dots: true } }, { breakpoint: 600, settings: { slidesToShow: 2, slidesToScroll: 2 } }, { breakpoint: 480, settings: { slidesToShow: 1, slidesToScroll: 1 } } ]" >
                 <div ng-repeat="place in vm.places | filter:{order_by:published} | limitTo:10" >
                     <div class="ibox-content">
