--- a/client/app/place/place-add.html
+++ b/client/app/place/place-add.html
@@ -1,9 +1,10 @@
 <div class="container">
+    <h2>Pendaftaran Listing</h2>
     <form name="addPlaceForm" class="form-horizontal">
-        <h2>Add New Place</h2>
         <wizard on-finish="finishedWizard()">
-            <wz-step wz-title="Starting" canexit="exitWithAPromise">
+            <wz-step wz-title="Tentukan Lokasi">
                 <h3>Tentukan lokasi</h3>
+                <p>Klik pada peta untuk menentukan titik koordinat lokasi yang ingin anda daftarkan.</p>
                 <div id="map_canvas" class="form-group">
                     <ui-gmap-google-map center="map.center" zoom="map.zoom" options="map.options" events="map.events" draggable="true">
                         <ui-gmap-marker ng-repeat="m in map.markers" coords="m.coords" options="m.options" events="m.events" idkey="m.id">
@@ -13,35 +14,66 @@
                 <div class="form-group">
                     <div class="row">
                         <div class="col-md-6">
-                            <input name="latitude" type="text" placeholder="Latitude" ng-model="latitude" required="required" class="form-control" />
+                            <input name="latitude" type="text" placeholder="Latitude" ng-model="latitude" required="required" class="form-control" placeholder="Latitude" />
                         </div>
                         <div class="col-md-6">
-                            <input name="longitude" type="text" placeholder="Longitude" ng-model="longitude" required="required" class="form-control" />
+                            <input name="longitude" type="text" placeholder="Longitude" ng-model="longitude" required="required" class="form-control" placeholder="Longitude" />
                         </div>
                     </div>
                 </div>
                 <div class="form-group">
-                    <input type="submit" class="btn btn-default pull-right" wz-next value="Continue" />
+                    <button type="submit" class="btn btn-primary pull-right" wz-next>
+                        Next <span class="glyphicon glyphicon-hand-right" aria-hidden="true"></span>
+                    </button>
                 </div>
             </wz-step>
-            <wz-step wz-title="Continuing">
-                <h1>Continuing</h1>
-                <p>You have continued here!</p>
-                <div class="form-group">
-                    <div ng-if="categoryCounter > 5" class="alert alert-danger">
-                        <strong>Number of category allowed: {{categoryCounter}} / 5.</strong>
+            <wz-step wz-title="Pilih Kategori" canexit="categoryValidation">
+                <div class="row">
+                    <div class="col-md-12">
+                        <h3>Pilih Kategori</h3>
                     </div>
-                    <div ng-if="categoryCounter <= 5" class="alert alert-success">
-                        <strong>Number of category allowed: {{categoryCounter}} / 5.</strong>
+                </div>
+                <div class="row">
+                    <div class="col-md-6">
+                        <p>Pilih kategori lokasi yang sesuai. Jumlah maksimum kategori yang dapat anda pilih adalah <b>{{maxCategory}}</b> kategori</p>
                     </div>
-                    <div ivh-treeview="categories" ivh-treeview-default-selected-state="false" ivh-treeview-expand-to-depth="1" ivh-treeview-twistie-expanded-tpl="'v'" ivh-treeview-twistie-collapsed-tpl="'>'" ivh-treeview-twistie-leaf-tpl="'-'" ivh-treeview-on-cb-change="changeCallback(ivhNode, ivhIsSelected, ivhTree)">
+                    <div class="col-md-6">
+                        <div ng-if="checkResults.length > 5" class="danger pull-right">
+                            <strong>Kategori yang dipilih melebihi jumlah maksimum yang ditentukan: {{checkResults.length}} / {{maxCategory}}.</strong>
+                        </div>
+                        <div ng-if="checkResults.length <= 5" class="pull-right">
+                            <strong>Jumlah kategori yang dipilih: {{checkResults.length}} / {{maxCategory}}.</strong>
+                        </div>
                     </div>
                 </div>
                 <div class="form-group">
-                    <input type="submit" class="btn btn-default pull-right" wz-next value="Continue" />
+                    <div ng-repeat="category in categories" class="col-lg-4">
+                        <div class="contact-box">
+                            <div class="col-md-2">
+                                <i class="fa {{category.icon}} fa-2x text-navy"></i>
+                            </div>
+                            <div class="col-md-10">
+                                <h3><strong><a href="#">{{ category.label }}</a></strong></h3>
+                                <div class="row">
+                                    <div ng-repeat="child in category.children">
+                                        <button type="button" class="btn btn-default btn-xs btn-sub-category" ng-model="singleModel[child._id]" btn-checkbox btn-checkbox-true="1" btn-checkbox-false="0" ng-click="subCategoryCallback(child._id)">
+                                            {{ child.label }}
+                                        </button>&nbsp;
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="clearfix"></div>
+                        </div>
+                    </div>
                 </div>
+                <button type="submit" class="btn btn-primary pull-right" wz-next>
+                    Next <span class="glyphicon glyphicon-hand-right" aria-hidden="true"></span>
+                </button>
+                <button type="submit" class="btn btn-primary pull-left" wz-previous>
+                    <span class="glyphicon glyphicon-hand-left" aria-hidden="true"></span> Previous
+                </button>
             </wz-step>
-            <wz-step wz-title="More steps">
+            <wz-step wz-title="Detail Informasi">
                 <p>Even more steps!!</p>
                 <div class="form-group">
                     <label for="title">Title</label>
@@ -77,7 +109,7 @@
                     <input type="submit" class="btn btn-default pull-right" wz-next value="Continue" />
                 </div>
             </wz-step>
-            <wz-step wz-title="More steps">
+            <wz-step wz-title="Upload Foto">
                 <p>Even more steps!!</p>
                 <div class="form-group" nv-file-drop="" uploader="uploader">
                     <div class="row">
@@ -162,4 +194,10 @@
             </wz-step>
         </wizard>
     </form>
+</div>
+<div>
+    &nbsp;
+</div>
+<div>
+    &nbsp;
 </div>
