--- a/client/index.html
+++ b/client/index.html
@@ -38,7 +38,7 @@
             </div>
         </div>
     </div>
-    <section class="content white-bg">
+    <section class="content white-bg" style="padding-bottom: 50px;">
         <div ng-view>
     </section>
     <footer class="gray-section contact gray-bg">
@@ -136,8 +136,8 @@
     <script src="/client/app/user/user.module.js"></script>
     <script src="/client/app/admin/user/admin.user.module.js"></script>
     <script src="/client/app/blocks/exception/exception.module.js"></script>
-    <script src="/client/app/blocks/router/router.module.js"></script>
     <script src="/client/app/blocks/logger/logger.module.js"></script>
+    <script src="/client/app/blocks/router/router.module.js"></script>
     <script src="/client/app/core/bootstrap.dialog.js"></script>
     <script src="/client/app/core/common.js"></script>
     <script src="/client/app/core/config.breeze.js"></script>
@@ -167,8 +167,8 @@
     <script src="/client/app/admin/user/admin.user.route.js"></script>
     <script src="/client/app/blocks/exception/exception.factory.js"></script>
     <script src="/client/app/blocks/exception/exception.handler.provider.js"></script>
-    <script src="/client/app/blocks/router/router.factory.js"></script>
     <script src="/client/app/blocks/logger/logger.factory.js"></script>
+    <script src="/client/app/blocks/router/router.factory.js"></script>
     <script src="/client/app/data/resources/resource.category.cache.js"></script>
     <script src="/client/app/data/resources/resource.category.js"></script>
     <script src="/client/app/data/resources/resource.city.js"></script>
