SQ-30 fix text-danger css

--- a/client/app/place/place-add.html
+++ b/client/app/place/place-add.html
@@ -38,7 +38,7 @@
                         <p>Pilih kategori lokasi yang sesuai. Jumlah maksimum kategori yang dapat anda pilih adalah <b>{{maxCategory}}</b> kategori</p>
                     </div>
                     <div class="col-md-6">
-                        <div ng-if="checkResults.length > 5" class="danger pull-right">
+                        <div ng-if="checkResults.length > 5" class="text-danger pull-right">
                             <strong>Kategori yang dipilih melebihi jumlah maksimum yang ditentukan: {{checkResults.length}} / {{maxCategory}}.</strong>
                         </div>
                         <div ng-if="checkResults.length <= 5" class="pull-right">
